k8s/41-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker
  namespace: devops-app
  labels:
    app.kubernetes.io/name: worker
    app.kubernetes.io/part-of: taskflow
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: worker
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 6000
