k8s/51-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: devops-app
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: taskflow
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
